<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <!-- MAIN SCREEN -->
    <LinearLayout android:id="@+id/screen_main" style="@style/LLScreen">
        <TextView style="@style/GameTitle" />
        <Button android:id="@+id/button_invite_players"
            style="@style/MainScreenButton"
            android:text="@string/invite_players" />
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/invite_players_explanation" />
        <Button android:id="@+id/button_see_invitations"
            style="@style/MainScreenButton"
            android:text="@string/see_invitations" />
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/see_invitations_explanation" />
        <Button android:id="@+id/button_camera_game"
            style="@style/MainScreenButton"
            android:text="camera game" />
        <Button android:id="@+id/button_settings"
            style="@style/MainScreenButton"
            android:text="settings" />
    </LinearLayout>

    <!-- INVITATION POPUP -->
    <LinearLayout android:id="@+id/invitation_popup" style="@style/InvPopup">
        <TextView android:id="@+id/incoming_invitation_text" style="@style/InvPopupText" />
        <Button android:id="@+id/button_accept_popup_invitation"
            style="@style/InvPopupButton"
            android:text="@string/accept_popup_invite" />
    </LinearLayout>

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout android:id="@+id/screen_wait" style="@style/LLScreen">
        <TextView style="@style/Blurb" android:text="@string/please_wait" />
    </LinearLayout>

    <!-- GAMEPLAY SCREEN -->
    <LinearLayout android:id="@+id/screen_game" style="@style/LLScreen">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextureView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textureView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                xmlns:android="http://schemas.android.com/apk/res/android"
                tools:ignore="ObsoleteLayoutParam">
            </TextureView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/radar"
                android:id="@+id/radar"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp" />

           <!-- <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="150dp"> -->

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favorite_black_24dp"
                    android:id="@+id/heart1"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="200dp"
                    android:outlineProvider="bounds"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favorite_black_24dp"
                    android:id="@+id/heart2"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="250dp"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favorite_black_24dp"
                    android:id="@+id/heart3"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="300dp"
                    tools:ignore="VectorDrawableCompat" />
           <!-- </LinearLayout> -->

            <ProgressBar
                android:id="@+id/firstBar"
                android:layout_width="200dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="150dp"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                style="@android:style/Widget.ProgressBar.Horizontal"

                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/radar" />

            <TextView
                android:text="METIMAS!!!"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:textSize="40dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="300dp"
                android:id="@+id/textViewThrowing" />

            <TextView
                android:id="@+id/instructions"
                android:text="@string/instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="300dp"
                android:padding="250dp"/>
            <TextView
                android:id="@+id/my_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="300dp"
                android:padding="300dp"/>

            <Button
                android:id="@+id/button_click_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorAccent"

                android:text="@string/click_me"
                android:layout_marginBottom="100dp"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="195dp"/> <!--style="@style/GameButton"-->

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="130dp"
                android:layout_height="97dp"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="510dp"
                android:adjustViewBounds="true"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/football"
                android:background="@null"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:text="9"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="175dp"
                android:layout_marginTop="520dp"
                android:adjustViewBounds="true"
                android:textSize="55dp"/>

            <com.getbase.floatingactionbutton.FloatingActionsMenu
                android:id="@+id/multiple_actions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_addButtonColorNormal="@color/green"
                fab:fab_addButtonColorPressed="@color/green_pressed"
                fab:fab_addButtonPlusIconColor="@color/yellow"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="275dp"
                android:layout_marginTop="250dp"
                tools:ignore="RtlHardcoded">

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/action_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_icon="@drawable/ic_location_on_black_24dp"
                    fab:fab_colorNormal="@color/yellow"
                    fab:fab_size="normal"
                    fab:fab_colorPressed="@color/yellow_pressed"/>

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/action_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_icon="@drawable/ic_chat_bubble_black_24dp"
                    fab:fab_colorNormal="@color/yellow"
                    fab:fab_size="normal"
                    fab:fab_colorPressed="@color/yellow_pressed"/>

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/action_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_icon="@drawable/ic_assignment_black_24dp"
                    fab:fab_colorNormal="@color/yellow"
                    fab:fab_size="normal"
                    fab:fab_colorPressed="@color/yellow_pressed"/>

            </com.getbase.floatingactionbutton.FloatingActionsMenu>

            <TextView
                android:id="@+id/countdown"
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:layout_marginTop="50dp"/> <!-- style="@style/FigureLabel" -->

            <TextView
                android:id="@+id/score0"
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:layout_marginTop="100dp"/>
            <TextView
                android:id="@+id/score1"
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:layout_marginTop="150dp"/>

            <TextView
                android:id="@+id/score2"
                android:layout_height="150dp"
                android:layout_width="150dp" />

            <TextView
                android:id="@+id/score3"
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="300dp"/>-->
        </FrameLayout>
    </LinearLayout>

    <!-- MAPS SCREEN -->
    <!--
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/maps"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.aeappss.multiplayer.MapsActivity" />
    -->
</FrameLayout>
